Timeline speed text element cannot shrink preventing other elements to jump in size

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -5934,6 +5934,8 @@ only screen and (max-device-width: 320px) {
 }
 
 #diagram-timeline-speed {
+  flex-shrink: 0;
+  width: 64px;
   margin: 0 4px;
   font-size: 12px;
   white-space: nowrap;
